# rowdy

./: .gitignore  BUGS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  USAGE.md  demo.tape  rowdy-keymap.html
.github/workflows/: ci.yml
assets/: demo.cast
seed/: duckdb.sql  mongodb.sh  mysql.sql  postgres.sql  redis.sh  snippets.toml  sqlite.sql
src/: app.rs  config.rs  export.rs  history.rs  main.rs  snippets.rs
src/db/: converters.rs  error.rs  mod.rs  query_builder.rs  types.rs
src/db/connectors/: duckdb.rs  mod.rs  mongodb.rs  mysql.rs  postgres.rs  redis.rs  sqlite.rs  turso.rs
src/db/traits/: kv_client.rs  mod.rs  nosql_client.rs  sql_client.rs
src/events/: app_event.rs  handler.rs  mod.rs
src/ui/: layout.rs
src/ui/components/: mod.rs  modal.rs  status_bar.rs
src/ui/screens/: connection.rs  data_grid.rs  edit_record.rs  erd_graph.rs  mod.rs  sql_editor.rs  table_list.rs
